--- a/src/entrypoints/popup/index.html
+++ b/src/entrypoints/popup/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Distracted</title>
+    <title>Lockout</title>
     <meta name="manifest.type" content="browser_action" />
   </head>
-  <body>
+  <body class="dark">
     <div id="app"></div>
     <script type="module" src="./main.tsx"></script>
   </body>
